--- a/fundamentos/nginx.yml
+++ b/fundamentos/nginx.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx-3
+  name: nginx-pod
   labels:
-    app: nginx-3
+    app: nginx-pod
     tier: frontend
 spec:
   containers:
-    - name: nginx-3
+    - name: nginx-container
       image: nginx
   
