--- a/curso-3-k8s/revision-svc/pod.yml
+++ b/curso-3-k8s/revision-svc/pod.yml
@@ -22,3 +22,15 @@ spec:
   containers:
     - name: web-app-container
       image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: queue
+  labels:
+    app: queue
+    release: r1
+spec:
+  containers:
+    - name: queue-container
+      image: richardchesterwood/k8s-fleetman-queue:release1
