--- a/project/deployments/vote.yml
+++ b/project/deployments/vote.yml
@@ -1,3 +1,4 @@
+#Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -5,7 +6,10 @@ metadata:
     app: vote
   name: vote
   namespace: vote-ns
+#Spec do deployment
 spec:
+  #Runtime ok v2 antes de substituir pod v1
+  minReadySeconds: 30
   selector:
     matchLabels:
       app: vote
@@ -13,6 +17,7 @@ spec:
     metadata:
       labels:
         app: vote
+    #spec do container
     spec:
       containers:
         - name: vote-container
@@ -20,7 +25,9 @@ spec:
           ports:
             - containerPort: 80
               name: vote
+  #Número de réplicas desse deploy
   replicas: 1
+
 
       
     
